@@ -2101,3 +2101,8 @@ pkgBSDF will generate correct proxy geometry.
 
 Created pabopto2xyz tool to combine different sensor measurements
 into a single CIE-XYZ measurement file for color BSDF interpolation.
+
+Jan Wienold updated evalglare to version 1.30
+
+Roland Schregle added out-of-core photon mapping routines, which
+may be compiled using the PMAP_OOC macro.
